--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,8 @@
-APP_ID=
-API_HASH=
-BOT_TOKEN=
-DB_NAME=
-LOG_CHANNEL_ID=
-MONGO_DB_URI=
-OWNER_NAME=
-OWNER_ID=
+APP_ID=28524972
+API_HASH=409130d1d167a2c26862e65e8779a3d6
+BOT_TOKEN=7696179651:AAHKlvY1xYz_F14QPv3DcVqJYgBcWUj4MTQ
+DB_NAME=ferdisyrl
+LOG_CHANNEL_ID=-1002333374162
+MONGO_DB_URI=mongodb+srv://ferdisyrl:buburayam1@cluster0.89myp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+OWNER_NAME=fsyrl9
+OWNER_ID=1506963557
